Fixed docker + linting

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -41,14 +41,13 @@
   color: #888;
 } */
 
-
 /* body {
   background-color: var(--background-color);
   color: var(--text-color);
   transition: background-color 0.4s, color 0.4s;
 }
 
-/* Apply to buttons, forms, and other elements */
+Apply to buttons, forms, and other elements
 button {
   background-color: var(--button-bg-color);
   color: var(--button-text-color);
