--- a/frontend/src/components/fontSizeMenu/styles.css
+++ b/frontend/src/components/fontSizeMenu/styles.css
@@ -5,7 +5,9 @@
   border-radius: 5px;
   background-color: var(--font-size-container-bg-color); /* Use same background color */
   color: var(--font-size-container-text-color); /* Use same text color */
-  transition: background-color 0.4s, color 0.4s;
+  transition:
+    background-color 0.4s,
+    color 0.4s;
 }
 
 #font-size-dropdown-btn {
@@ -26,14 +28,13 @@
   cursor: pointer;
 }
 
-
 #font-size-dropdown-menu {
   display: block;
   position: absolute;
   background-color: white;
   width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1000; 
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
   max-height: 30%;
   overflow-y: scroll;
   /* left: 50%; */
@@ -54,7 +55,6 @@
 .font-size-drop-menu-item:hover {
   background-color: #ebeaea;
 }
-
 
 .font-size-incDec-button-div {
   display: flex;
