--- a/frontend/src/components/nodeSelectedLookup/styles.css
+++ b/frontend/src/components/nodeSelectedLookup/styles.css
@@ -23,14 +23,13 @@
   cursor: pointer;
 }
 
-
 #font-size-dropdown-menu {
   display: block;
   position: absolute;
   background-color: white;
   width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1000; 
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
   max-height: 30%;
   overflow-y: scroll;
   /* left: 50%; */
@@ -51,7 +50,6 @@
 .font-size-drop-menu-item:hover {
   background-color: #ebeaea;
 }
-
 
 .font-size-incDec-button-div {
   display: flex;
