--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -76,8 +76,8 @@ button:focus-visible {
 :root {
   --background-color: #ffffff;
   --text-color: #000000;
-  --navbar-bg-color: #f5f5f5;
-  --second-navbar-bg-color: #f2f2f2;
+  --navbar-bg-color: transparent !important;
+  --second-navbar-bg-color: transparent;
   --icon-color: #000000;
   --div-bg-color: #f9f9f9;
   --submit-codebar-bg-color: #f7f9fb; /* Light mode color */
@@ -90,8 +90,8 @@ button:focus-visible {
 [data-theme='dark'] {
   --background-color: #121212;
   --text-color: #ffffff;
-  --navbar-bg-color: #333333;
-  --second-navbar-bg-color: #444444;
+  --navbar-bg-color: transparent !important;
+  --second-navbar-bg-color: transparent;
   --icon-color: #ffffff;
   --div-bg-color: #222222;
   --submit-codebar-bg-color: #444444; /* Dark mode grey color */
